<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="wangyijieholding.agendaapplication.util.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="wangyijieholding.agendaapplication.util.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="wangyijieholding.agendaapplication.util.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="wangyijieholding.agendaapplication.util.SettingsActivity$TimePreferenceFragment"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:title="@string/pref_header_time_format" />

</preference-headers>
