<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="wangyijieholding.agendaapplication.calendar.EditEventActivity"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text = "@string/title_select_date"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/edit_spinner_year" />

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/edit_spinner_month" />

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/edit_spinner_day" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/edit_specify_time_section_layout">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/edit_event_start_clock"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:text="@string/title_start_time"
                android:id="@+id/edit_event_start_time"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/edit_event_start_clock"
                android:layout_toStartOf="@id/edit_event_start_clock"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:text="@string/title_end_date"
                android:id="@+id/edit_event_end_calendar_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/edit_event_start_time"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_event_end_calendar_spinners"
                android:layout_below="@id/edit_event_end_calendar_label">

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_spinner_end_year" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_spinner_end_month" />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_spinner_end_day" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/edit_event_end_clock"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignRight="@id/edit_event_start_clock"
                android:layout_alignEnd="@id/edit_event_start_clock"
                android:layout_below="@id/edit_event_end_calendar_spinners"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:id="@+id/edit_event_end_time"
                android:text="@string/title_end_time"
                android:layout_alignLeft="@id/edit_event_start_time"
                android:layout_alignStart="@id/edit_event_start_time"
                android:layout_alignBottom="@id/edit_event_end_clock"
                />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_select_time"
            android:id="@+id/edit_title_select_time" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_specify_time"
            android:id="@+id/edit_specify_time_check_box"
            android:layout_gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_select_type"
            android:id="@+id/edit_label_select_type" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_spinner_event_type"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hint_event_title"
            android:id="@+id/edit_label_event_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/default_event_title"
            android:id="@+id/edit_event_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_event_desc"
            android:id="@+id/edit_label_event_desc" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_event_desc"
            android:id="@+id/edit_event_desc" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_edit_cancel"
                android:onClick="cancel"
                android:id="@+id/edit_event_cancel" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_edit_event"
                android:onClick="editEventData"
                android:id="@+id/new_event_button"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>